# rag-api-for-docs

./: .dockerignore  .env.example  .env.test  .gitignore  .gitleaks.toml  .gitleaksignore  .markdownlint.yml  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-core.in  requirements-core.txt  requirements-dev.in  requirements-dev.txt  requirements-ml.in  requirements.in  requirements.txt  validate_embedding_changes.py
.github/: SOCIAL_PREVIEW.md  topics.json
alembic/: env.py
app/: __init__.py  main.py
docs/: 1.0-tech_stack.md  10.0-llm-router.md  11.0-flexible-monitoring.md  11.0-redis-cache-integration.md  12.0-redis-cache-integration.md  13.0-ingestion-engine.md  2.0-coding_structure.md  3.0-development_environment.md  4.0-git_workflow.md  5.0-project_phases.md  5.1-improved_ingest_flow_plan.md  7.0-clickhouse-langfuse-setup.md  8.0-langfuse_evaluation_setup.md  9.0-structured-logging.md  coding_structure.md  current_status.md  development_environment.md  ingestion_engine.md  project_phases.md  tech_stack.md  testing_heuristics.md
pdf_documents/: sample_policy.txt
requirements/: requirements-core.in  requirements-core.txt  requirements-dev.in  requirements-dev.txt  requirements-ml.in  requirements-ml.txt  requirements.in  requirements.txt
scripts/: README.md  app_startup.sh  celery_beat.sh  celery_worker.sh  create_sample_pdf.py  document_management.py  generate_samples_from_pdf.py  health_check.sh  ingest.py  ingest_simple.py  manage_embedding_providers.py  manage_env.sh  run_baseline_evaluation.py  run_migrations.sh  test_ingestion_integration.py
tests/: conftest.py  test_adaptive_chunker.py  test_api_docs_endpoints.py  test_api_ingest_changes.py  test_chat.py  test_cors.py  test_dedup_versioning.py  test_e2e_stream.py  test_embeddings_config.py  test_flexible_metrics.py  test_groq_smoke.py  test_incremental_processor.py  test_ingestion.py  test_ingestion_engine.py  test_ingestion_integration.py  test_jobs.py  test_jobs_and_status.py  test_llm_router.py  test_main.py  test_openai_smoke.py  test_ratelimit.py  (+6 more)
(+97 files in other folders)
